# cmake-examples

./: .gitignore  CMakeLists.txt
libs/: CMakeLists.txt
libs/array_utils/: CMakeLists.txt
libs/array_utils/include/: array_utils.h
libs/array_utils/src/: array_utils.cpp
tests/: CMakeLists.txt
tests/gtests/: CMakeLists.txt
tests/gtests/array_utils_tests/: CMakeLists.txt
tests/gtests/array_utils_tests/src/: binary_search_test_suite.cpp  sort_test_suite.cpp
